PhotoImporter checks new Inbox for conflicts
- swagger updated
- inboxUrl changed to filename only
